--- a/media-stack/docker-compose.yml
+++ b/media-stack/docker-compose.yml
@@ -306,73 +306,73 @@ volumes:
     driver_opts:
         type: none
         o: bind
-        device: "/${ROOT_DIR:-/nfs}/media-stack/lidarr/"
+        device: "/${ROOT_DIR:-nfs}/media-stack/lidarr/"
   sonarr-config:
     driver: local
     driver_opts:
         type: none
         o: bind
-        device: "/${ROOT_DIR:-/nfs}/media-stack/sonarr/"
+        device: "/${ROOT_DIR:-nfs}/media-stack/sonarr/"
   radarr-config:
     driver: local
     driver_opts:
         type: none
         o: bind
-        device: "/${ROOT_DIR:-/nfs}/media-stack/radarr/"      
+        device: "/${ROOT_DIR:-nfs}/media-stack/radarr/"      
   prowlarr-config:
     driver: local
     driver_opts:
         type: none
         o: bind
-        device: "/${ROOT_DIR:-/nfs}/media-stack/prowlarr/"        
+        device: "/${ROOT_DIR:-nfs}/media-stack/prowlarr/"        
   # tdarr-config:
   #   driver: local
   #   driver_opts:
   #       type: none
   #       o: addr= bind
-  #       device: "/${ROOT_DIR:-/nfs}/media-stack/tdarr/configs"        
+  #       device: "/${ROOT_DIR:-nfs}/media-stack/tdarr/configs"        
   # tdarr-server:
   #   driver: local
   #   driver_opts:
   #       type: none
   #       o: addr= bind
-  #       device: "/${ROOT_DIR:-/nfs}/media-stack/tdarr/server"      
+  #       device: "/${ROOT_DIR:-nfs}/media-stack/tdarr/server"      
   # tdarr-logs:
   #   driver: local
   #   driver_opts:
   #       type: none
   #       o: addr= bind
-  #       device: "/${ROOT_DIR:-/nfs}/media-stack/tdarr/logs"      
+  #       device: "/${ROOT_DIR:-nfs}/media-stack/tdarr/logs"      
   qBittorrentVpn-config:
     driver: local
     driver_opts:
         type: none
         o: bind
-        device: "/${ROOT_DIR:-/nfs}/media-stack/qBittorrent/"  
+        device: "/${ROOT_DIR:-nfs}/media-stack/qBittorrent/"  
   homarr-data:
     driver: local
     driver_opts:
         type: none
         o: bind
-        device: "/${ROOT_DIR:-/nfs}/homarr"
+        device: "/${ROOT_DIR:-nfs}/homarr"
   homarr-icons:
     driver: local
     driver_opts:
         type: none
         o: bind
-        device: "/${ROOT_DIR:-/nfs}/homarr/icons"
+        device: "/${ROOT_DIR:-nfs}/homarr/icons"
   homarr-configs:
     driver: local
     driver_opts:
         type: none
         o: bind
-        device: "/${ROOT_DIR:-/nfs}/homarr/configs"   
+        device: "/${ROOT_DIR:-nfs}/homarr/configs"   
   jellyseer_config:
     driver: local
     driver_opts:
         type: none
         o: bind
-        device: "/${ROOT_DIR:-/nfs}/media-stack/jellyseer"
+        device: "/${ROOT_DIR:-nfs}/media-stack/jellyseer"
 
   # media files hosted on Mediaserver
   media-temp:
@@ -380,11 +380,11 @@ volumes:
     driver_opts:
         type: nfs4
         o: addr=${NAS_IP},rw
-        device: ":/${ROOT_DIR:-/nfs}/temp/"
+        device: ":/${MEDIA_DIR:-mnt/media}/temp/"
 
   media-source:
     driver: local
     driver_opts:
         type: nfs4
         o: addr=${NAS_IP},rw
-        device: ":/${ROOT_DIR:-/nfs}/source/"
+        device: ":/${MEDIA_DIR:-mnt/media}/source/"
