removed trailing slashes from the nfs device paths for the volumes

--- a/media-stack/docker-compose.yml
+++ b/media-stack/docker-compose.yml
@@ -306,25 +306,25 @@ volumes:
     driver_opts:
         type: none
         o: bind
-        device: ":/${VOLUME_DIR:-nfs}/lidarr/"
+        device: ":/${VOLUME_DIR:-nfs}/lidarr"
   sonarr-config:
     driver: local
     driver_opts:
         type: none
         o: bind
-        device: ":/${VOLUME_DIR:-nfs}/sonarr/"
+        device: ":/${VOLUME_DIR:-nfs}/sonarr"
   radarr-config:
     driver: local
     driver_opts:
         type: none
         o: bind
-        device: ":/${VOLUME_DIR:-nfs}/radarr/"      
+        device: ":/${VOLUME_DIR:-nfs}/radarr"      
   prowlarr-config:
     driver: local
     driver_opts:
         type: none
         o: bind
-        device: ":/${VOLUME_DIR:-nfs}/prowlarr/"        
+        device: ":/${VOLUME_DIR:-nfs}/prowlarr"        
   # tdarr-config:
   #   driver: local
   #   driver_opts:
@@ -348,7 +348,7 @@ volumes:
     driver_opts:
         type: none
         o: bind
-        device: ":/${VOLUME_DIR:-nfs}/qBittorrent/"  
+        device: ":/${VOLUME_DIR:-nfs}/qBittorrent"  
   homarr-data:
     driver: local
     driver_opts:
@@ -380,11 +380,11 @@ volumes:
     driver_opts:
         type: none
         o: bind
-        device: ":/${MEDIA_DIR:-media}/temp/"
+        device: ":/${MEDIA_DIR:-media}/temp"
 
   media-source:
     driver: local
     driver_opts:
         type: none
         o: bind
-        device: ":/${MEDIA_DIR:-media}/source/"
+        device: ":/${MEDIA_DIR:-media}/source"
